Displays points of starbucks on the map

--- a/vc10/HW04_ruebusjwVer2.vcxproj.filters
+++ b/vc10/HW04_ruebusjwVer2.vcxproj.filters
@@ -42,5 +42,8 @@
     <None Include="..\resources\Starbucks_2006.csv">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="..\resources\USA01.PNG">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
