--- a/vc10/HW04_ruebusjwVer2.vcxproj
+++ b/vc10/HW04_ruebusjwVer2.vcxproj
@@ -117,6 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\Starbucks_2006.csv" />
+    <None Include="..\resources\USA01.PNG" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
